<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">DriveFinance</string>
    <string name="toolbar_top_text">Placeholder</string>
    <string name="open_side_menu">Open side menu</string>
    <string name="not_logged_in_text">Not yet logged into Google Drive</string>
    <string name="now_logged_in_text">Now logged into Google Drive. <br /> Please type in the name of the folder associated with your DriveFinance</string>
    <string name="login_failed_text">Failed to log in to drive</string>
    <string name="retry">Retry</string>
    <string name="folder_name">Folder name</string>
    <string name="loading_folder_contents">Loading folder contents…</string>
    <string name="select_folder">Select folder</string>
    <string name="folder_name_lookup_key">com.jrmitchell.drivefinance.FOLDER_NAME_LOOKUP_KEY</string>
    <string name="login_top_text">DriveFinance login process</string>
    <string name="no_payments_file_found">No Payments file found!</string>
    <string name="reports">Reports</string>
    <string name="payments">Payments</string>
    <string name="reading_payments_file">Reading Payments file…</string>
    <string name="placeholder">Placeholder</string>
    <string name="status_curr_status_code">Current status code: %1s</string>
    <string name="status_curr_folder_name">Current folder name: %1s</string>
    <string name="status_set_change_folder_name">Set/change folder name:</string>
    <string name="set">Set</string>
    <string name="status">Status</string>
</resources>