<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.LoggedInFragment">

    <TextView
        android:id="@+id/logged_in_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:gravity="center_horizontal"
        android:text="@string/now_logged_in_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/edittext_foldername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_foldername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/folder_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/foldername_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logged_in_textview" />

    <Button
        android:id="@+id/foldername_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_folder"
        app:layout_constraintBottom_toTopOf="@+id/folder_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_foldername" />

    <ProgressBar
        android:id="@+id/folder_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/foldername_button" />

</androidx.constraintlayout.widget.ConstraintLayout>